--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,8 +1,11 @@
 $white: #ffffff;
 $black: #000000;
 $tiffanyLeft: #7fcebb;
-$tiffanyRight: #73c0b2;      
+$tiffany: #73c0b2;
 $grayBtn: #444444;
 $grayLinkHover: #666666;
 $lightGray: #f1f1f1;
 $grayLinkDown: #b3b3b3;
+$size:font-size;
+$weig:font-weight;
+
