--- a/src/sass/blocks/pageHeader/topMenu.scss
+++ b/src/sass/blocks/pageHeader/topMenu.scss
@@ -1,8 +1,13 @@
 
+.header {
+  border: 1px solid red;
+  width: 320px;
+}
+
 .menu-top {
 width: 320px;
-border:1px solid red;
-margin: 0 auto;
+
+
 display: flex;
 &__logo{
 margin:22px 0px 22px 116px;
@@ -31,7 +36,7 @@ margin-left: 50px;
  padding: 10px 0px 30px;
  text-align: center;
  text-decoration: none;
- @include text(17px, 700);
+
  line-height: 24px;
  color: #000;
  box-shadow: 0 1px 0 #ececec,
@@ -53,15 +58,16 @@ margin-left: 50px;
 
         &__link {
 display: block;
-padding: 10px 0px 30px;
-text-align: center;
+margin-top: -10px;
+padding: 10px 0px 10px;
+
 text-decoration: none;
 @include text(17px, 700);
 line-height: 24px;
-color: #000;
+color: black;
 box-shadow: 0 1px 0 #ececec,
 inset 0 1px 0 #ececec;
-text-align: center;
+
 
         }
 
