--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -1,8 +1,7 @@
-@mixin text($size, $weig) {
-  font: {
-    family: 'Open Sans';
-    size: $size;
-    weight: $weig;
-  }
+@mixin sample {
+
+  font-family: 'Open Sans';
+  font-size: $size;
+  font-weight: $weight;
 }
 
