--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -25,7 +25,7 @@ display: none;
   margin-top: -10px;
   padding: 10px 0px 10px;
   text-decoration: none;
-   @include text(17px, 700);
+  
   line-height: 24px;
   color: black;
   box-shadow: 0 1px 0 #ececec, inset 0 1px 0 #ececec;
@@ -39,7 +39,7 @@ padding-bottom: 74px;
 border: 1px solid red;
 background:#f1f1f1;
 text-align: center;
-@include text(27px,700);
+
 line-height: 30px;
 }
 .catalog{
@@ -52,13 +52,13 @@ margin-left: 30px;
 margin-top: 20px;
 }
 &__title{
-@include text(17px,700);
+  @include sample;
 line-height: 24px;
 margin-left: 30px;
 margin-top: 20px;
 }
 &__descr{
-@include text(13px,400);
+
 color: #444444;
 line-height: 30px;
 margin-left: 30px;
@@ -74,7 +74,7 @@ justify-content: space-between;
 margin-left: 30px;
 &__number{
 
-@include text(15px,700);
+
 line-height: 24px;
 
 margin-top: 10px;
@@ -97,7 +97,7 @@ flex-direction:row-reverse;
 justify-content: space-around;
 }
 &__title{
-@include text(17px,700);
+  @include sample;
 line-height: 24px;
 width: 126px;
 margin-top: 20px;
@@ -112,7 +112,7 @@ background-image: url(../img/video-mobile.png);
 margin:36px 79px;
 }
 &__descr{
-@include text(13px,400);
+
 line-height: 24px;
 color:#444444;
 margin-top: 34px;
