--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -1,8 +1,8 @@
-@mixin text($size, $weig) {
+@mixin textLg($size, $weight) {
   font: {
     family: 'Open Sans';
     size: $size;
-    weight: $weig;
+    weight: $weight;
   }
 }
 
