--- a/src/style/blocks/pageHeader/topMenu.scss
+++ b/src/style/blocks/pageHeader/topMenu.scss
@@ -5,14 +5,14 @@
 
     &__logo-link {
         text-align: center;
-        background-image: url('img/logo-mishka-mobile.png');
+        background-image: url('../img/logo-mishka-mobile.png');
         background-position: 50% 50%;
         background-repeat: no-repeat;
         background-size: 60px;
       }
 
     &__list {
-        display: none;
+        // display: none;
         list-style: none;
         height: 315px;
         padding: 0;
@@ -20,7 +20,7 @@
 
     &__item {
         height: 79px;
-        border: 1px solid #ececec;
+        border: 1px solid $baseC;
         text-align: center;
     }
     &__link {
@@ -40,7 +40,7 @@
 
         &__logo-link {
             text-align: center;
-            background-image: url('img/logo-tablet.png');
+            background-image: url('./img/logo-tablet.png');
             background-position: 50% 50%;
             background-repeat: no-repeat;
           }
