--- a/src/style/blocks/pageHeader/bottomMenu.scss
+++ b/src/style/blocks/pageHeader/bottomMenu.scss
@@ -1,8 +1,11 @@
 .menu-bottom {
 
-    background-image: url('../img/header-bg-mobile.jpg');
-    background-position: 50% -60%;
-    background-repeat: no-repeat;
+    
+      background-image: url('/img/header-bg-mobile.jpg');
+    background-position: 50% 60%;
+    background-repeat: no-repeat;  
+    
+    
 
     &__list{
         display: block;
@@ -16,7 +19,7 @@
 
     &__link{
         color: #ffffff;
-    text-decoration: none;
+        text-decoration: none;
     }
     &__caption{
         width: 100px;
@@ -29,24 +32,27 @@
 
     &__item--left{
         border: 1px solid #7fcebb;
-        background-color: #7fcebb;
-        background-image: url('../img/lamp.png');
+        background-color:#7fcebb;
+        background-image: url('/img/lamp.png');
         background-position: 83%;
         background-repeat: no-repeat;
     }
     &__item--right{
         border: 1px solid #73c0b2;
         background-color: #73c0b2;
+        background-image: url('/img/toy.png');
+        background-position: 83%;
+        background-repeat: no-repeat;
 
     }
 
-        &__title {
-            font-size: 27px;
-            font-weight: 700;
-            color: #000000;
-            width: 244px;
-            text-align: center;
-            margin: 0 auto;
+    &__title {
+        font-size: 27px;
+        font-weight: 700;
+        color: #000000;
+        width: 244px;
+        text-align: center;
+        margin: 0 auto;
 
     }
 }
@@ -59,7 +65,7 @@
 
     .menu-bottom{
         height: 746px;
-        background-image: url("../img/header-bg.jpg");
+        background-image: url('/img/header-bg.jpg');
         background-position: 50% -60%;
         background-repeat: no-repeat;
 
