--- a/src/style/blocks/pageHeader/topMenu.scss
+++ b/src/style/blocks/pageHeader/topMenu.scss
@@ -2,20 +2,17 @@
     display: block;
     text-align: center;
     height: 79px;
-&__logo{
- background: url('/img/logo-mishka-mobile.png')no-repeat ;
-background-position: 50% 50%;
 
-
-        background-size: 60px;
+    &__logo{
+         background: url('./img/logo-mishka-mobile.png');
+         background-position: 50% 50%;
+         background-repeat: no-repeat;
 }
     &__logo-img {
         text-align: center;
-
       }
 
     &__item {
-        // display: none;
         list-style: none;
         height: 315px;
         padding: 0;
@@ -43,7 +40,7 @@ background-position: 50% 50%;
 
         &__logo-link {
             text-align: center;
-            background-image: url('/img/logo-tablet.png');
+            background-image: url('img/logo-tablet.png');
             background-position: 50% 50%;
             background-repeat: no-repeat;
           }
