--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,3 +1,15 @@
+$baseC: red;
 $size: 25px;
 $weight: 400;
-$baseColor: red;
+$white: #ffffff;
+$black: #000000;
+$tiffanyLeft: #7fcebb;
+$tiffany: #73c0b2;
+$grayBtn: #444444;
+$grayLinkHover: #666666;
+$lightGray: #f1f1f1;
+$grayLinkDown: #b3b3b3;
+$size: font-size;
+$weig: font-weight;
+
+
