--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -1,6 +1,6 @@
 .main-catalog {
+margin-left: 3px;
 
- margin-top: -22px;
 
         &__title {
           padding-top: 55px;
@@ -13,10 +13,11 @@
 .catalog{
   display: flex;
   flex-direction: column;
+width: 20px;
 
   &__item{
   width: 260px;
-  border: 1px solid #ececec;
+  border: 5px solid #ececec;
   margin-left: 30px;
   margin-top: 20px;
   }
@@ -43,9 +44,9 @@
   justify-content: space-between;
   margin-left: 30px;
 
-  &__number{  
+  &__number{
   line-height: 24px;
-  
+
   margin-top: 10px;
   margin-bottom: 20px;
   }
@@ -80,7 +81,7 @@
   margin:36px 79px;
   }
   &__descr{
-  
+
   line-height: 24px;
   color:#444444;
   margin-top: 34px;
@@ -91,10 +92,10 @@
   height: 52px;
   border: 2px solid #444444;
   background-color: #ffffff;
-  
-  
+
+
   }
-  
+
   }
 
 
