работа со спрайтом

--- a/src/img/sprite.scss
+++ b/src/img/sprite.scss
@@ -1,340 +1,340 @@
 .bg-cart_2x {
     width: 42px; height: 36px;
-    background: url('css_sprites.png') -160px -808px;
+    background: url('/img/css_sprites.png') -160px -808px;
 }
 .bg-cart {
     width: 21px; height: 18px;
-    background: url('css_sprites.png') -913px -798px;
+    background: url('/img/css_sprites.png') -913px -798px;
 }
 .bg-cartDown_1x {
     width: 21px; height: 18px;
-    background: url('css_sprites.png') -844px -203px;
+    background: url('/img/css_sprites.png') -844px -203px;
 }
 .bg-cartDown2x {
     width: 42px; height: 36px;
-    background: url('css_sprites.png') -829px -714px;
+    background: url('/img/css_sprites.png') -829px -714px;
 }
 .bg-cartHover_1x {
     width: 21px; height: 18px;
-    background: url('css_sprites.png') -913px -836px;
+    background: url('/img/css_sprites.png') -913px -836px;
 }
 .bg-cartHover_2x {
     width: 42px; height: 36px;
-    background: url('css_sprites.png') -222px -808px;
+    background: url('/img/css_sprites.png') -222px -808px;
 }
 .bg-copyrightDown_1x {
     width: 27px; height: 34px;
-    background: url('css_sprites.png') -913px -120px;
+    background: url('/img/css_sprites.png') -913px -120px;
 }
 .bg-copyrightDown_2x {
     width: 54px; height: 68px;
-    background: url('css_sprites.png') -168px -714px;
+    background: url('/img/css_sprites.png') -168px -714px;
 }
 .bg-copyrightHover_1x {
     width: 27px; height: 34px;
-    background: url('css_sprites.png') -913px -228px;
+    background: url('/img/css_sprites.png') -913px -228px;
 }
 .bg-copyrightHover_2x {
     width: 54px; height: 68px;
-    background: url('css_sprites.png') -242px -714px;
+    background: url('/img/css_sprites.png') -242px -714px;
 }
 .bg-fbDown_1x {
     width: 15px; height: 28px;
-    background: url('css_sprites.png') -913px -662px;
+    background: url('/img/css_sprites.png') -913px -662px;
 }
 .bg-fbDown_2x {
     width: 30px; height: 56px;
-    background: url('css_sprites.png') -110px -808px;
+    background: url('/img/css_sprites.png') -110px -808px;
 }
 .bg-fbHover_1x {
     width: 15px; height: 28px;
-    background: url('css_sprites.png') -913px -710px;
+    background: url('/img/css_sprites.png') -913px -710px;
 }
 .bg-fbHover_2x {
     width: 30px; height: 56px;
-    background: url('css_sprites.png') -60px -808px;
+    background: url('/img/css_sprites.png') -60px -808px;
 }
 .bg-flag_2x {
     width: 94px; height: 162px;
-    background: url('css_sprites.png') -10px -532px;
+    background: url('/img/css_sprites.png') -10px -532px;
 }
 .bg-flag {
     width: 47px; height: 81px;
-    background: url('css_sprites.png') -844px -102px;
+    background: url('/img/css_sprites.png') -844px -102px;
 }
 .bg-huge_arrow_left {
     width: 50px; height: 26px;
-    background: url('css_sprites.png') -314px -476px;
+    background: url('/img/css_sprites.png') -314px -476px;
 }
 .bg-huge_arrow_left_2x {
     width: 100px; height: 52px;
-    background: url('css_sprites.png') -744px -529px;
+    background: url('/img/css_sprites.png') -744px -529px;
 }
 .bg-huge_arrow_right {
     width: 50px; height: 26px;
-    background: url('css_sprites.png') -384px -476px;
+    background: url('/img/css_sprites.png') -384px -476px;
 }
 .bg-huge_arrow_right_2x {
     width: 100px; height: 52px;
-    background: url('css_sprites.png') -744px -601px;
+    background: url('/img/css_sprites.png') -744px -601px;
 }
 .bg-instaDown_1x {
     width: 22px; height: 21px;
-    background: url('css_sprites.png') -913px -451px;
+    background: url('/img/css_sprites.png') -913px -451px;
 }
 .bg-instaDown_2x {
     width: 44px; height: 42px;
-    background: url('css_sprites.png') -441px -714px;
+    background: url('/img/css_sprites.png') -441px -714px;
 }
 .bg-instaHover_1x {
     width: 22px; height: 21px;
-    background: url('css_sprites.png') -913px -492px;
+    background: url('/img/css_sprites.png') -913px -492px;
 }
 .bg-instaHover_2x {
     width: 44px; height: 42px;
-    background: url('css_sprites.png') -505px -714px;
+    background: url('/img/css_sprites.png') -505px -714px;
 }
 .bg-logo_desktop_2x {
     width: 298px; height: 144px;
-    background: url('css_sprites.png') -272px -10px;
+    background: url('/img/css_sprites.png') -272px -10px;
 }
 .bg-logo_desktop {
     width: 149px; height: 72px;
-    background: url('css_sprites.png') -744px -10px;
+    background: url('/img/css_sprites.png') -744px -10px;
 }
 .bg-logo_footer_2x {
     width: 204px; height: 68px;
-    background: url('css_sprites.png') -124px -532px;
+    background: url('/img/css_sprites.png') -124px -532px;
 }
 .bg-logo_footer {
     width: 102px; height: 34px;
-    background: url('css_sprites.png') -232px -326px;
+    background: url('/img/css_sprites.png') -232px -326px;
 }
 .bg-logo_footerDown_1x {
     width: 102px; height: 34px;
-    background: url('css_sprites.png') -192px -476px;
+    background: url('/img/css_sprites.png') -192px -476px;
 }
 .bg-logo_footerDown_2x {
     width: 204px; height: 68px;
-    background: url('css_sprites.png') -416px -388px;
+    background: url('/img/css_sprites.png') -416px -388px;
 }
 .bg-logo_footerHover_1x {
     width: 102px; height: 34px;
-    background: url('css_sprites.png') -354px -326px;
+    background: url('/img/css_sprites.png') -354px -326px;
 }
 .bg-logo_footerHover_2x {
     width: 204px; height: 68px;
-    background: url('css_sprites.png') -192px -388px;
+    background: url('/img/css_sprites.png') -192px -388px;
 }
 .bg-logo_mobile_1x {
     width: 86px; height: 35px;
-    background: url('css_sprites.png') -478px -532px;
+    background: url('/img/css_sprites.png') -478px -532px;
 }
 .bg-logo_mobile_2x {
     width: 172px; height: 70px;
-    background: url('css_sprites.png') -124px -620px;
+    background: url('/img/css_sprites.png') -124px -620px;
 }
 .bg-menu_1x {
     width: 20px; height: 14px;
-    background: url('css_sprites.png') -869px -424px;
+    background: url('/img/css_sprites.png') -869px -424px;
 }
 .bg-menu_2x {
     width: 40px; height: 28px;
-    background: url('css_sprites.png') -507px -808px;
+    background: url('/img/css_sprites.png') -507px -808px;
 }
 .bg-menu_close_1x {
     width: 21px; height: 20px;
-    background: url('css_sprites.png') -913px -758px;
+    background: url('/img/css_sprites.png') -913px -758px;
 }
 .bg-menu_close_2x {
     width: 42px; height: 40px;
-    background: url('css_sprites.png') -767px -714px;
+    background: url('/img/css_sprites.png') -767px -714px;
 }
 .bg-mishka_logo_tablet_2x {
     width: 224px; height: 92px;
-    background: url('css_sprites.png') -232px -214px;
+    background: url('/img/css_sprites.png') -232px -214px;
 }
 .bg-mishka_logo_tablet {
     width: 113px; height: 46px;
-    background: url('css_sprites.png') -744px -463px;
+    background: url('/img/css_sprites.png') -744px -463px;
 }
 .bg-phone {
     width: 25px; height: 24px;
-    background: url('css_sprites.png') -913px -326px;
+    background: url('/img/css_sprites.png') -913px -326px;
 }
 .bg-phone_2x {
     width: 50px; height: 48px;
-    background: url('css_sprites.png') -650px -620px;
+    background: url('/img/css_sprites.png') -650px -620px;
 }
 .bg-phoneH_A_1x {
     width: 25px; height: 24px;
-    background: url('css_sprites.png') -913px -282px;
+    background: url('/img/css_sprites.png') -913px -282px;
 }
 .bg-phoneH_A_2x {
     width: 50px; height: 48px;
-    background: url('css_sprites.png') -580px -620px;
+    background: url('/img/css_sprites.png') -580px -620px;
 }
 .bg-play_2x {
     width: 202px; height: 154px;
-    background: url('css_sprites.png') -10px -214px;
+    background: url('/img/css_sprites.png') -10px -214px;
 }
 .bg-play {
     width: 101px; height: 77px;
-    background: url('css_sprites.png') -744px -246px;
+    background: url('/img/css_sprites.png') -744px -246px;
 }
 .bg-playDown_1x {
     width: 81px; height: 62px;
-    background: url('css_sprites.png') -640px -388px;
+    background: url('/img/css_sprites.png') -640px -388px;
 }
 .bg-playDown_2x {
     width: 162px; height: 124px;
-    background: url('css_sprites.png') -10px -388px;
+    background: url('/img/css_sprites.png') -10px -388px;
 }
 .bg-playHover_2x {
     width: 242px; height: 184px;
-    background: url('css_sprites.png') -10px -10px;
+    background: url('/img/css_sprites.png') -10px -10px;
 }
 .bg-search {
     width: 18px; height: 18px;
-    background: url('css_sprites.png') -865px -284px;
+    background: url('/img/css_sprites.png') -865px -284px;
 }
 .bg-search_2x {
     width: 36px; height: 36px;
-    background: url('css_sprites.png') -396px -808px;
+    background: url('/img/css_sprites.png') -396px -808px;
 }
 .bg-searchDown_1x {
     width: 18px; height: 18px;
-    background: url('css_sprites.png') -831px -424px;
+    background: url('/img/css_sprites.png') -831px -424px;
 }
 .bg-searchDown_2x {
     width: 36px; height: 36px;
-    background: url('css_sprites.png') -284px -808px;
+    background: url('/img/css_sprites.png') -284px -808px;
 }
 .bg-searchHover_1x {
     width: 18px; height: 18px;
-    background: url('css_sprites.png') -865px -246px;
+    background: url('/img/css_sprites.png') -865px -246px;
 }
 .bg-searchHover_2x {
     width: 36px; height: 36px;
-    background: url('css_sprites.png') -340px -808px;
+    background: url('/img/css_sprites.png') -340px -808px;
 }
 .bg-twitterDown_1x {
     width: 23px; height: 20px;
-    background: url('css_sprites.png') -913px -573px;
+    background: url('/img/css_sprites.png') -913px -573px;
 }
 .bg-twitterDown_2x {
     width: 46px; height: 40px;
-    background: url('css_sprites.png') -701px -714px;
+    background: url('/img/css_sprites.png') -701px -714px;
 }
 .bg-twitterHover_1x {
     width: 23px; height: 20px;
-    background: url('css_sprites.png') -913px -533px;
+    background: url('/img/css_sprites.png') -913px -533px;
 }
 .bg-twitterHover_2x {
     width: 46px; height: 40px;
-    background: url('css_sprites.png') -635px -714px;
+    background: url('/img/css_sprites.png') -635px -714px;
 }
 .bg-fb_1x {
     width: 15px; height: 29px;
-    background: url('css_sprites.png') -913px -613px;
+    background: url('/img/css_sprites.png') -913px -613px;
 }
 .bg-fb_2x {
     width: 30px; height: 56px;
-    background: url('css_sprites.png') -10px -808px;
+    background: url('/img/css_sprites.png') -10px -808px;
 }
 .bg-insta_1x {
     width: 22px; height: 21px;
-    background: url('css_sprites.png') -913px -410px;
+    background: url('/img/css_sprites.png') -913px -410px;
 }
 .bg-insta_2x {
     width: 44px; height: 42px;
-    background: url('css_sprites.png') -377px -714px;
+    background: url('/img/css_sprites.png') -377px -714px;
 }
 .bg-twitter_1x {
     width: 24px; height: 20px;
-    background: url('css_sprites.png') -913px -370px;
+    background: url('/img/css_sprites.png') -913px -370px;
 }
 .bg-twitter_2x {
     width: 46px; height: 40px;
-    background: url('css_sprites.png') -569px -714px;
+    background: url('/img/css_sprites.png') -569px -714px;
 }
 .bg-copyright_1x {
     width: 27px; height: 34px;
-    background: url('css_sprites.png') -913px -174px;
+    background: url('/img/css_sprites.png') -913px -174px;
 }
 .bg-copyright_2x {
     width: 54px; height: 68px;
-    background: url('css_sprites.png') -94px -714px;
+    background: url('/img/css_sprites.png') -94px -714px;
 }
 .bg-map_pin_1x {
     width: 67px; height: 100px;
-    background: url('css_sprites.png') -744px -343px;
+    background: url('/img/css_sprites.png') -744px -343px;
 }
 .bg-map_pin_2x {
     width: 134px; height: 200px;
-    background: url('css_sprites.png') -590px -10px;
+    background: url('/img/css_sprites.png') -590px -10px;
 }
 .bg-feature1_1x {
     width: 33px; height: 38px;
-    background: url('css_sprites.png') -913px -10px;
+    background: url('/img/css_sprites.png') -913px -10px;
 }
 .bg-feature1_2x {
     width: 64px; height: 74px;
-    background: url('css_sprites.png') -10px -714px;
+    background: url('/img/css_sprites.png') -10px -714px;
 }
 .bg-feature2_1x {
     width: 35px; height: 34px;
-    background: url('css_sprites.png') -452px -808px;
+    background: url('/img/css_sprites.png') -452px -808px;
 }
 .bg-feature2_2x {
     width: 70px; height: 68px;
-    background: url('css_sprites.png') -316px -620px;
+    background: url('/img/css_sprites.png') -316px -620px;
 }
 .bg-feature3_1x {
     width: 47px; height: 27px;
-    background: url('css_sprites.png') -584px -532px;
+    background: url('/img/css_sprites.png') -584px -532px;
 }
 .bg-feature3_2x {
     width: 94px; height: 54px;
-    background: url('css_sprites.png') -476px -214px;
+    background: url('/img/css_sprites.png') -476px -214px;
 }
 .bg-feature4_1x {
     width: 55px; height: 23px;
-    background: url('css_sprites.png') -476px -326px;
+    background: url('/img/css_sprites.png') -476px -326px;
 }
 .bg-feature4_2x {
     width: 110px; height: 46px;
-    background: url('css_sprites.png') -348px -532px;
+    background: url('/img/css_sprites.png') -348px -532px;
 }
 .bg-feature5_1x {
     width: 34px; height: 27px;
-    background: url('css_sprites.png') -651px -532px;
+    background: url('/img/css_sprites.png') -651px -532px;
 }
 .bg-feature5_2x {
     width: 68px; height: 54px;
-    background: url('css_sprites.png') -492px -620px;
+    background: url('/img/css_sprites.png') -492px -620px;
 }
 .bg-feature6_1x {
     width: 33px; height: 32px;
-    background: url('css_sprites.png') -913px -68px;
+    background: url('/img/css_sprites.png') -913px -68px;
 }
 .bg-feature6_2x {
     width: 66px; height: 64px;
-    background: url('css_sprites.png') -406px -620px;
+    background: url('/img/css_sprites.png') -406px -620px;
 }
 .bg-interior_1x {
     width: 41px; height: 62px;
-    background: url('css_sprites.png') -316px -714px;
+    background: url('/img/css_sprites.png') -316px -714px;
 }
 .bg-interior_2x {
     width: 80px; height: 124px;
-    background: url('css_sprites.png') -744px -102px;
+    background: url('/img/css_sprites.png') -744px -102px;
 }
 .bg-toy_1x {
     width: 61px; height: 61px;
-    background: url('css_sprites.png') -831px -343px;
+    background: url('/img/css_sprites.png') -831px -343px;
 }
 .bg-toy_2x {
     width: 120px; height: 120px;
-    background: url('css_sprites.png') -590px -230px;
+    background: url('/img/css_sprites.png') -590px -230px;
 }
