--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -82,7 +82,7 @@ line-height: 30px;
 .video-page {
 &__video{
 margin-top: 6px;
-background-image:url(dist/img/video-mobile.png);
+
 
 }
 
@@ -139,6 +139,37 @@ margin-left: 69px;
 
 }
 }
+.modal-ctg {
+  width: 320px;
+  height: 336px;
+  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+  border: 1px solid #c6c6c6;
+  &__title {
+    margin-left: 89px;
+    margin-top: 36px;
+    width: 149px;
+
+    @include textLg(25px, 700);
+    line-height: 30px;
+    text-transform: uppercase;
+
+  }
+  &__text {
+    @include textLg(15px, 400);
+    line-height: 30px;
+color: $grayBtn;
+    text-align: center;
+    margin-top: -15px;
+  }
 
 
+
+  &__btn{
+    width: 260px;
+    height: 52px;
+    background-color: #63d1bb;
+margin-left: 30px;
+cursor: pointer;
+  }
+}
 
