--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -1,20 +1,24 @@
 body{
 width: 320px;
-border: 1px solid blue;
+
+
 }
 .main-catalog {
   margin-top: 22px;
+width: 320px;
+
   &__title {
 @include textLg(27px,700);
 display: block;
   padding-top: 55px;
   padding-bottom: 74px;
 padding-left: 40px;
-border: 1px solid red;
+
 background: #f1f1f1;
 line-height: 30px;
   }
   .catalog {
+
   display: flex;
   flex-direction: column;
   width: 320px;
@@ -54,6 +58,13 @@ line-height: 30px;
 &__link {
         margin-top: 12px;
       }
+&__link-pic{
+width: 21px;
+height: 19px;
+opacity:1;
+
+}
+
     }
   }
 }
@@ -70,7 +81,7 @@ line-height: 30px;
     justify-content: space-around;
   }
 &__title {
-@include textLg(17px, 400);
+@include textLg(17px, 700);
 
     line-height: 24px;
     width: 126px;
@@ -80,70 +91,116 @@ line-height: 30px;
     margin-top: 35px;
   }
 .video-page {
+
 &__video{
 margin-top: 6px;
 
-
 }
-
-
 &__link-pic {
-      margin: 36px 79px;
-
-    }
-    &__descr {
+position: absolute;
+margin: 46px 79px;
+}
+&__descr {
       width: 183px;
 @include textLg(13px, 400);
 line-height: 24px;
-      color: $grayBtn;
-
-      margin-top: 34px;
+color: $grayBtn;
+margin-top: 34px;
 margin-left: 34px;
+
     }
   }
   .player__btn {
-    width: 192px;
-    height: 52px;
-    border: 2px solid $grayBtn;
-
-    background-color: #ffffff;
+border: 2px solid $grayBtn;
+background-color: #ffffff;
 margin-left: 34px;
 margin-top: 9px;
 text-transform: uppercase;
 @include textLg(17px,700);
 color:$grayBtn;
-
+cursor: pointer;
 line-height: 16px;
+padding: 20px 26px ;
   }
 }
 .footer{
-  display: flex;
+display: flex;
 flex-direction: column;
 margin-top: 58px;
 background:#f1f1f1;
 height: 160px;
 &__social{
-margin-left: 37px;
+margin-left: 30px;
 margin-top: 30px;
-border-bottom:1px solid #000;
-
+border-bottom:1px solid #e5e5e5;
+display: flex;
 padding-bottom: 30px;
 width: 260px;
+}
+&__insta {
+margin-left: 57px;
+padding-right: 41px;
+width: 22px;
+height: 21px;
+cursor: pointer;
+  background: url('/src/img/css_sprites.png') no-repeat -913px -410px;
+
+
+}
+  &__facebook {
+    cursor: pointer;
+    padding-right: 40px;
+width: 21px;
+height: 29px;
+background: url('/src/img/css_sprites.png')no-repeat -913px -613px;
+}
+&__twitter{
+  cursor: pointer;
+ width: 24px;
+ height: 20px;
+ background: url('/src/img/css_sprites.png') -913px -370px;
 }
 &__link{
 margin-left: 40px;
 }
+&__copyright{
+display: flex;
+}
 &__creator{
 @include textLg(19px, 700);
 margin-left: 69px;
+}
+&__creator-pic{
+cursor: pointer;
+margin-top: 22px;
+margin-left: 30px;
+width: 27px;
+height: 34px;
+background: url('/src/img/css_sprites.png') -913px -174px;
+}
+&__creator-pic:hover{
+ width: 27px;
+ height: 34px;
+ background: url("/src/img/css_sprites.png") -913px -228px;
 
 }
+
+
 }
 .modal-ctg {
+margin-top:-250px;
+margin-left: -30px;
   width: 320px;
   height: 336px;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   border: 1px solid #c6c6c6;
+background: #fff;
+position: fixed;
+top: 40%;
+
+
+
+
   &__title {
     margin-left: 89px;
     margin-top: 36px;
@@ -161,18 +218,74 @@ color: $grayBtn;
     text-align: center;
     margin-top: -15px;
   }
+&__form{
+width: 260px;
+margin-top: 38px;
+margin-left: 30px;
+}
+&__input{
+display: none;
+}
+&__size{
+padding:20px 34px;
+cursor: pointer;
+border: 2px solid #c6c6c6;
 
 
 
-  &__btn{
+@include textLg(17px, 700);
+background-color: #ffffff;
+color:#444444;
+line-height: 16px;
+
+}
+&__size:hover{
+border: 2px solid #63d1bb;
+}
+&__input:checked+&__size{
+border: 2px solid #63d1bb;
+}
+&__btn{
     width: 260px;
     height: 52px;
     background-color: #63d1bb;
-margin-left: 30px;
 cursor: pointer;
-@include textLg(17px, 400);
-
-
+@include textLg(17px, 700);
+line-height: 16px;
+color:$white;
+margin-left: 30px;
+text-transform:uppercase;
+margin-top: 44px;
+border: none
   }
+.overlay{
+
+
+width: 320px;
+height: 2444px;
+position: fixed;
+opacity: 0.9;
+background-color:#fff;
+border:1px solid red;
+ cursor:pointer;
+ display:none;
+ z-index:3;
+top: 0;
+left: 0;
+margin-left: 70px;
+
+
+
+
+
+
+
+
+
+
+
 }
+
+}
+
 
