добавил стили для планшета в квталог

--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -5,4 +5,11 @@
     weight: $weight;
   }
 }
+@mixin flexbox {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
 
