--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -4,8 +4,8 @@ width: 320px;
 
 }
 .main-catalog {
-  margin-top: 22px;
-width: 320px;
+    margin-top: 22px;
+    width: 320px;
 
   &__title {
 @include textLg(27px,700);
@@ -19,21 +19,53 @@ line-height: 30px;
   }
   .catalog {
 
-  display: flex;
-  flex-direction: column;
+
   width: 320px;
+&__img{
+background-image:url(/src/img/photo-1-mobile.png);
+width: 260px;
+height: 195px;
+margin-left: 30px;
+
+}
+
 &__item {
   width: 260px;
   border: 1px solid #ececec;
   margin-left: 30px;
-  margin-top: 20px;
+margin-top: -4px;
+margin-bottom: 20px;
     }
+&__item:hover{
+box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+border: 1px solid #ececec;
+background-color: #ffffff;
+
+}
+&__item:active{
+box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+border: 1px solid #ececec;
+background-color: #ffffff;
+
+}
+
+
+
     &__title {
+cursor: pointer;
 @include textLg(17px,700);
   line-height: 24px;
   margin-left: 30px;
   margin-top: 20px;
     }
+&__title:hover{
+opacity: 0.6;
+}
+&__title:active{
+opacity: 0.3;
+
+}
+
     &__descr {
 @include textLg(17px, 400);
   color: #444444;
@@ -45,7 +77,8 @@ line-height: 30px;
   width: 204px;
     }
 .catalog-price {
-  display: flex;
+@include flexbox;
+
   width: 204px;
   justify-content: space-between;
   margin-left: 30px;
@@ -64,76 +97,99 @@ height: 19px;
 opacity:1;
 
 }
+&__link-pic:hover{
+
+width: 21px;
+height: 18px;
+background: url("/src/img/css_sprites.png") -913px -836px;
+
+}
+
 
     }
   }
 }
 
 .player-video {
-  width: 260px;
+
   height: 503px;
   border: 1px solid #ececec;
   margin: 30px 30px 0 30px;
+@include flexbox;
+flex-direction: column;
 
-&__process {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-  }
+
+  .player-process {
+
+@include flexbox;
+flex-direction: row-reverse;
+justify-content: space-around;
+padding-left: 40px;
+
+
+//kav
 &__title {
 @include textLg(17px, 700);
-
+margin-left: 25px;
     line-height: 24px;
-    width: 126px;
-    margin-top: 20px;
+margin-top: 20px;
   }
-&__link {
+
+&__link-pic {
     margin-top: 35px;
+
   }
+}
 .video-page {
 
-&__video{
-margin-top: 6px;
+&__video img{
 
 }
 &__link-pic {
-position: absolute;
-margin: 46px 79px;
+margin-top: -116px;
+margin-left: 79px;
+position: relative;
+
 }
 &__descr {
-      width: 183px;
 @include textLg(13px, 400);
 line-height: 24px;
 color: $grayBtn;
 margin-top: 34px;
 margin-left: 34px;
-
+margin-right: 10px;
+order:3;
     }
-  }
-  .player__btn {
-border: 2px solid $grayBtn;
-background-color: #ffffff;
-margin-left: 34px;
-margin-top: 9px;
-text-transform: uppercase;
-@include textLg(17px,700);
-color:$grayBtn;
-cursor: pointer;
-line-height: 16px;
-padding: 20px 26px ;
-  }
+}
+.player__btn {
+    width: 192px;
+    height: 52px;
+    display: inline-block;
+    border: 2px solid $grayBtn;
+    background-color: $white;
+    margin-left: 34px;
+    margin-top: 9px;
+    order: 4;
+    text-transform: uppercase;
+    @include textLg(17px,700);
+    color:$grayBtn;
+    cursor: pointer;
+    line-height: 16px;
+}
 }
 .footer{
-display: flex;
-flex-direction: column;
-margin-top: 58px;
-background:#f1f1f1;
-height: 160px;
+@include flexbox;
+    flex-direction: column;
+    margin-top: 58px;
+    background:#f1f1f1;
+    height: 160px;
+    width: 320px;
 &__social{
 margin-left: 30px;
 margin-top: 30px;
 border-bottom:1px solid #e5e5e5;
-display: flex;
+@include flexbox;
+
 padding-bottom: 30px;
 width: 260px;
 }
@@ -164,7 +220,8 @@ background: url('/src/img/css_sprites.png')no-repeat -913px -613px;
 margin-left: 40px;
 }
 &__copyright{
-display: flex;
+@include flexbox;
+
 }
 &__creator{
 @include textLg(19px, 700);
@@ -182,10 +239,7 @@ background: url('/src/img/css_sprites.png') -913px -174px;
  width: 27px;
  height: 34px;
  background: url("/src/img/css_sprites.png") -913px -228px;
-
 }
-
-
 }
 .modal-ctg {
 margin-top:-250px;
@@ -196,21 +250,16 @@ margin-left: -30px;
   border: 1px solid #c6c6c6;
 background: #fff;
 position: fixed;
-top: 40%;
-
-
-
-
-  &__title {
+top: 50%;
+display: none;
+&__title {
     margin-left: 89px;
     margin-top: 36px;
     width: 149px;
-
-    @include textLg(25px, 700);
+@include textLg(25px, 700);
     line-height: 30px;
     text-transform: uppercase;
-
-  }
+}
   &__text {
     @include textLg(15px, 400);
     line-height: 30px;
@@ -230,14 +279,10 @@ display: none;
 padding:20px 34px;
 cursor: pointer;
 border: 2px solid #c6c6c6;
-
-
-
 @include textLg(17px, 700);
 background-color: #ffffff;
 color:#444444;
 line-height: 16px;
-
 }
 &__size:hover{
 border: 2px solid #63d1bb;
@@ -259,8 +304,6 @@ margin-top: 44px;
 border: none
   }
 .overlay{
-
-
 width: 320px;
 height: 2444px;
 position: fixed;
@@ -272,20 +315,200 @@ border:1px solid red;
  z-index:3;
 top: 0;
 left: 0;
-margin-left: 70px;
+margin-left: 10px;
+}
+}
+@media (min-width: 768px){
+body{
+
+width: 720px;
+
+
+}
+.menu-top{
+height: 88px;
+width: 760px;
+
+@include flexbox;
 
 
 
 
+&__logo{
+ width: 113px;
+height: 46px;
+ background: url('/src/img/css_sprites.png')no-repeat -744px -463px;
+cursor: pointer;
+margin-left: 48px;
+}
+&__item{
+@include flexbox;
+
+}
+&__link{
+@include textLg(15px, 700);
+margin-top: 25px;
+line-height: 24px;
+margin-left: 50px;
+margin-right: -23px;
+display: block;
+}
+&__link-shipping {
+  margin-left: 160px;
+  margin-top: 25px;
+  height: 14px;
+  position: absolute;
+  @include textLg(15px, 400);
+  color: #444444;
+  text-decoration: none;
+  line-height: 24px;
+}
 
 
 
 
+&__search {
+  display: none;
+}
 
+
+
+&__cart {
+  @include textLg(17px, 700);
+  line-height: 24px;
+  color: #000000;
+  width: 181px;
+}
 
 
 }
 
+
+
+.main-catalog{
+    width: 760px;
+    margin-top: -35px;
+&__title {
+@include textLg(43px, 700);
+    padding:106px 0px 78px 198px;
+    background: #f1f1f1;
+    line-height: 50px;
 }
-
-
+.catalog{
+@include flexbox;
+    width: 760px;
+    flex-wrap:wrap;
+    margin-top: 70px;
+&__img{
+    background:url(/src/img/tablet/item1-1x.png)no-repeat ;
+    width: 334px;
+    height: 334px;
+    margin-left: 50px;
+    margin-bottom: 44px;
+}
+&__item{
+width: 335px;
+height: 333px;
+margin-top: 0px;
+border: 1px solid #ececec;
+background-color: #ffffff;
+margin-left: 0;
+}
+&__title{
+@include textLg(20px, 700);
+line-height: 24px;
+margin-left:28px;
+margin-top: 25px;
+}
+&__descr{
+@include textLg(15px, 400);
+color:#444444;
+line-height: 30px;
+margin-top: -20px;
+ padding-bottom: 170px;
+ border-bottom: 1px solid #ececec;
+ width: 268px;
+margin-left: 30px;
+}
+  .catalog-price {
+@include flexbox;
+  width: 268px;
+  justify-content: space-between;
+  margin-left: 30px;
+  }
+}
+}
+.player-video {
+    display: flex;
+    height: 703px;
+.player-process {
+@include flexbox;
+    order: 2;
+    margin-top: 43px;
+&__title {
+    @include textLg(20px, 700);
+    margin-top: -53px;
+    margin-right:350px;
+}
+&__link-pic{
+    margin-left: -8px;
+    margin-top: -50px;
+    position: absolute;
+}
+}
+.video-page {
+&__video img {
+    width: 100%;
+    background:url(/src/img/tablet/video-1x.jpg)no-repeat;
+    margin-bottom: 39px;
+    margin-top: -20px;
+    order: 1;
+    }
+&__link-pic{
+    margin-top: -308px;
+    position: absolute;
+    margin-left: 280px;
+}
+&__descr {
+    width: 581px;
+    @include textLg(15px, 400);
+    order:3;
+    margin-top: -9px;
+    margin-left: 40px;
+    line-height: 30px;
+}
+}
+.player__btn {
+    width: 584px;
+    height: 52px;
+    order:4;
+    border: 2px solid #444444;
+    background-color: #ffffff;
+    margin-right: 42px;
+    margin-top: 43px;
+}
+}
+.footer{
+flex:0 0 auto;
+flex-direction: row;
+width: 760px;
+height: 143px;
+background:#f1f1f1;
+margin-top: 63px;
+&__logo{
+width: 102px;
+height: 34px;
+background: url('/src/img/css_sprites.png') -232px -326px;
+margin-top: 51px;
+margin-left: 50px;
+}
+&__social{
+margin-top: 63px;
+margin-left: 99px;
+}
+&__copyright{
+margin-top: 38px;
+margin-left: -50px;
+}
+}
+}
