--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -35,11 +35,11 @@
    line-height: calc(50/43);
    font-weight: 700;
  }
-@mixin flexbox {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-}
+// @mixin flexbox {
+  // display: -webkit-box;
+  // display: -moz-box;
+  // display: -ms-flexbox;
+  // display: -webkit-flex;
+  // display: flex;
+// }
 
