--- a/src/style/blocks/pageHeader/bottomMenu.scss
+++ b/src/style/blocks/pageHeader/bottomMenu.scss
@@ -1,6 +1,6 @@
 .menu-bottom {
- background-image: url(./src/img/header-mobile-1x.jpg);
-    background-position: 50% 60%;
+ background: url(/src/img/header-mobile-1x.jpg);
+    background-position: 50% 0%;
     background-repeat: no-repeat;
 
     &__title {
@@ -25,15 +25,27 @@
         border: 1px solid $greenLeft;
         background-color: $greenLeft;
     }
+    &__icon1 {
+        display: block;
+        background: url(/src/img/sprites.png) no-repeat;
+        background-position: -226px -12px ;
+	    width: 41px;
+        height: 62px;
+        position: absolute;
+        margin: 25px 0 0 230px;
+    }
+    &__icon2 {
+        display: block;
+        background: url(/src/img/sprites.png) no-repeat;
+        background-position: -315px -12px ;
+	    width: 61px;
+        height: 61px;
+        position: absolute;
+        margin: 25px 0 0 220px;
+    }
     &__link {
         color: $white;
         text-decoration: none;
-        display: block;
-        background: url('img/sprites.png') no-repeat;
-        background-position: -226px -12px ;
-	width: 41px;
-	height: 62px;
-
     }
     &__caption {
         width: 100px;
@@ -45,7 +57,7 @@
     }
 
    
-    &__item--right {
+    &__item:last-child {
         border: 1px solid $greenRight;
         background-color: $greenRight;
        
@@ -59,7 +71,7 @@
         min-height: 746px;
         min-width: 668px;
         margin: 0 auto;
-        background: url('./img/header-tablet-1x.jpg');
+        background: url(/src/img/header-tablet-1x.jpg);
         background-position: 50% 60%;
         background-repeat: no-repeat;
 
@@ -76,6 +88,10 @@
         &__item{
             width: 334px;
             height: 114px;
+        }
+        &__icon2 {
+            position: absolute;
+        margin: 25px 0 0 570px;
 
         }
 
